--- a/ApCuentasClaras/Menus.resx
+++ b/ApCuentasClaras/Menus.resx
@@ -117,59 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="esperar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\esperar.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="TituloAplicacion" xml:space="preserve">
-    <value>Título del Formulario</value>
-  </data>
-  <data name="imagenArchivoAbrir" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenArchivoAbrir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenArchivoAbrir1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\imagenArchivoAbrir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenArchivoGuardar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenArchivoGuardar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenArchivoGuardar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\imagenArchivoGuardar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenbtbarAbrir" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenbtbarAbrir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenbtbarAbrir1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\imagenbtbarAbrir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenbtbarCopiar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenbtbarCopiar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenbtbarCortar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenbtbarCortar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenbtbarDeshacer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenbtbarDeshacer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenbtbarGuardar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenbtbarGuardar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenbtbarGuardar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\imagenbtbarGuardar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenbtbarPegar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenbtbarPegar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenEdicionCopiar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenEdicionCopiar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenEdicionCortar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenEdicionCortar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenEdicionDeshacer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenEdicionDeshacer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="imagenEdicionPegar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imaganes\imagenEdicionPegar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
+  <metadata name="BarraDeMenus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
+  </metadata>
+  <metadata name="BarraDeHerramientas.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>264, 17</value>
+  </metadata>
+  <metadata name="BarraDeEstado.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>369, 17</value>
+  </metadata>
 </root>
